9 October 2012: Wouter
	- with --enable-ratelimit you enable ratelimiting, with verbosity 2
	  it logs what is ratelimited for operational inspection.
	- unit test for rrl.
	- rrl uses mmap to save state across reloads.
	- rrl enum and u16 flags (dnskey type).
	- rrl whitelist and config.

8 October 2012: Wouter
	- Sync with unbound lookup3, has raninit value.

5 October 2012: Wouter
	- fix bug with event loop in zone transfer pipeline.
	- close xfrd_sock_p in server_child because otherwise due to use of
	  kqueue, it gets a broken pipe when that process exits (on FreeBSD).

4 October 2012: Wouter
	 - Fixup no use of internals ev_flags of libevent.

1 October 2012: Wouter
	- fix xfrd tcp skip.

21 September 2012: Wouter
	- tzset before chroot for correct timezone (from Camiel Dobbelaar).
	- pipeline support for AXFR and IXFR tcp queries.

11 September 2012: Wouter
	- writev support for TCP.

28 August 2012: Wouter
	- TXT records with components longer than 255 fail to parse,
	  but without segfault, it continues processing with non NULL value.

27 August 2012: Wouter
	- libevent in server_child.

21 August 2012: Matthijs
	- Fix bug#464: Conditionally define MAXHOSTNAMELEN

20 August 2012: Wouter
	- Fix hang on exit in xfrd.
	- optimized socket counts for zone transfer speed.

13 August 2012: Wouter
	- Fix xfrd libevent events.

10 August 2012: Wouter
	- libevent in xfrd.

26 July 2012: Yuri
	- Prioritize notify sender for requesting XFR.
	  (thanks Ilya Bakulin)

19 July 2012: Willem
	- Fix for VU#624931 CVE-2012-2978: NSD denial of service 
	  vulnerability from non-standard DNS packet from any host
	  on the internet.
	  http://www.nlnetlabs.nl/downloads/CVE-2012-2978.txt

18 July 2012: Wouter
	- Fix bug#460: man page correction - identity.

9 July 2012: Wouter
	- delete temporary transfer files on exit of xfrd and reload.
	- when tasks are applied, reload checks if it must exit between
	  tasks, so that it can quickly exit when NSD is told to quit.